public/client/style.css
body {
  padding-top: 50px;
}

p, h1, h2, h3, h4, div, a {
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  font-weight: 300;
}

@media (max-width: 979px) {
  body {
    padding-top: 0px;
  }
}

/*
Landing Page
*/
.landing {
  top: 50px;
  bottom: 0;
  width: 100%;
  background-image: url("../img/blackrock-mountain.jpg");
  background-size: cover;
  text-align: center;
  background-attachment: fixed;
}

.google-signin {
  background-color: rgba(255, 255, 255, 0.6);
  padding: 10px 25px;
  border: 2px solid	rgb(255, 128, 0);
  border-radius: 0;
  color: rgb(255, 128, 0);
  font-size: 18px;
  font-weight: 500;
  margin-top: 15px;
}

.google-signin:hover {
  background-color: rgb(44, 181, 81);
  color: white;
  border: 2px solid white;
}

.home {
  background-color: rgba(255, 255, 255, 0.6);
  color: rgb(44, 181, 81);
}

.landing-body {
  padding-top: 140px;
  padding-bottom: 140px;
}

.about {
  background-color: rgba(44, 181, 81, 0.4);
  color: white;
  padding-top: 140px;
  padding-bottom: 140px;
}

.customers {
  background-color: rgba(255, 255, 255, 0.9);
  padding-top: 140px;
  padding-bottom: 140px;
  color: rgb(44, 181, 81);
}

.testimonial {
  line-height: 1.3;
  font-weight: 300;
}

.hr-banner {
  position: relative;
  float: right;
  top: 0;
  right: 0;
  border: 0;
}

/*
Navbar
*/
.navbar {
  background-color: rgb(44, 181, 81);
  border-color: #888;
}

.footer {
  background-color: rgb(44, 181, 81);
  text-align: center;
  padding: 10px 0;
  color: white;
  position: fixed;
  bottom: 0;
  width: 100%;
}

.footer a {
  color: #FFFFFF;
}

.logout {
  margin-top: 15px;
  font-size: 16px;
  font-weight: 500;
  color: #FFFFFF;
}

.logout:hover, .logout:focus {
  text-decoration: none;
  color: #FFFFFF;
}

/*
Trip Overview
*/
.panel-title {
  font-size: 20px;
}

.glyphicon-tree-conifer {
  color: green;
}

.glyphicon-grain {
  color: red;
}

.pointer {
  cursor: pointer;
}

